--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <meta property="og:url" content="https://gymplan.fit/">
     <meta property="og:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
     <meta property="og:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
-    <meta property="og:image" content="https://gymplan.fit/logo.png">
+    <meta property="og:image" content="https://gymplan.fit/logo.png.png">
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gymplan.fit/">
     <meta property="twitter:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
     <meta property="twitter:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
-    <meta property="twitter:image" content="https://gymplan.fit/logo.png">
+    <meta property="twitter:image" content="https://gymplan.fit/logo.png.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" type="image/png" href="logo.png.png">
+    <link rel="apple-touch-icon" href="logo.png.png">
 
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -328,7 +328,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block mr-2" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z" /><path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd" /></svg>
                             Edit Inputs
                         </button>
-                        <button onclick="downloadPDF()" class="w-full sm:w-auto px-8 py-3 font-semibold text-white rounded-lg btn-primary">
+                        <button id="downloadPdfButton" onclick="downloadPDF()" class="w-full sm:w-auto px-8 py-3 font-semibold text-white rounded-lg btn-primary">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                             Download PDF
                         </button>
@@ -339,36 +339,38 @@
     </main>
 
     <!-- ─── PDF TEMPLATE (hidden) ─── -->
-    <div id="pdf-template" class="hidden p-8 bg-white text-gray-900 font-sans">
+    <div id="pdf-template" class="hidden p-8 bg-white text-gray-900 font-sans w-[210mm] min-h-[297mm] mx-auto">
       <!-- Header -->
-      <header class="flex items-center mb-6 border-b pb-4">
-        <img src="/logo.png" alt="GymPlan.fit Logo" class="h-12 mr-4">
+      <header class="flex items-center mb-6 border-b pb-4 border-gray-300">
+        <img src="logo.png.png" alt="GymPlan.fit Logo" class="h-12 mr-4">
         <div>
-          <h1 class="text-2xl font-bold">GymPlan.fit</h1>
+          <h1 class="text-2xl font-bold text-gray-900">Gym<span class="text-blue-600">Plan</span>.fit</h1>
           <p class="text-sm text-gray-600">Generated: <span id="pdf-date"></span></p>
         </div>
       </header>
 
-      <!-- Workout Days -->
-      <section class="space-y-8">
-        <!-- Repeat this block for each day -->
-        <article class="page-break-inside-avoid">
-          <h2 class="text-xl font-semibold mb-3">Day 1: Push (Chest, Shoulders, Triceps)</h2>
-          <ul class="space-y-2">
-            <li>
-              <strong>Dumbbell Bench Press</strong> – 3×8 @ 75s rest
-              <p class="text-sm text-gray-600 italic">Focus on controlled movement.</p>
-            </li>
-            <!-- …other exercises -->
-          </ul>
-        </article>
-        <!-- /Repeat -->
+      <!-- Workout Summary -->
+      <section class="mb-8 p-4 bg-gray-50 rounded-lg border border-gray-200">
+        <h2 class="text-xl font-bold mb-3 text-gray-800">Plan Summary</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2 text-sm text-gray-700">
+            <div><strong>Goal:</strong> <span id="pdf-summary-goal"></span></div>
+            <div><strong>Days per Week:</strong> <span id="pdf-summary-days"></span></div>
+            <div><strong>Training Style:</strong> <span id="pdf-summary-style"></span></div>
+            <div><strong>Equipment:</strong> <span id="pdf-summary-equipment"></span></div>
+            <div><strong>User Profile:</strong> <span id="pdf-user-profile"></span></div>
+        </div>
+        <p class="text-sm text-gray-700 mt-3"><strong>Adjustments:</strong> <span id="pdf-summary-adjustments"></span></p>
       </section>
 
-      <!-- Footer -->
-      <footer class="fixed bottom-0 left-0 w-full text-center text-xs text-gray-500 py-4">
-        <span class="pageNumber"></span> / <span class="totalPages"></span>
-      </footer>
+      <!-- Workout Days Container -->
+      <section id="pdf-workout-days" class="space-y-8">
+        <!-- Day blocks will be injected here -->
+      </section>
+
+      <!-- Nutrition Section Container -->
+      <section id="pdf-nutrition-section" class="mt-10 p-4 bg-gray-50 rounded-lg border border-gray-200">
+        <!-- Nutrition details will be injected here -->
+      </section>
     </div>
     <!-- ─── end PDF TEMPLATE ─── -->
     
@@ -447,7 +449,21 @@
         const modalVideo = document.getElementById('modalVideo');
         const modalInstructions = document.getElementById('modalInstructions');
         const youtubeLink = document.getElementById('youtubeLink');
+        const downloadPdfButton = document.getElementById('downloadPdfButton'); // Get the download button
         
+        // PDF Template elements
+        const pdfTemplate = document.getElementById('pdf-template');
+        const pdfDate = document.getElementById('pdf-date');
+        const pdfSummaryGoal = document.getElementById('pdf-summary-goal');
+        const pdfSummaryDays = document.getElementById('pdf-summary-days');
+        const pdfSummaryStyle = document.getElementById('pdf-summary-style');
+        const pdfSummaryEquipment = document.getElementById('pdf-summary-equipment');
+        const pdfUserProfile = document.getElementById('pdf-user-profile');
+        const pdfSummaryAdjustments = document.getElementById('pdf-summary-adjustments');
+        const pdfWorkoutDays = document.getElementById('pdf-workout-days');
+        const pdfNutritionSection = document.getElementById('pdf-nutrition-section');
+
+
         // --- Form Initialization ---
         function initializeForm() {
             trainingDaysContainer.innerHTML = trainingDaysData.map(day => `
@@ -702,7 +718,7 @@ Your job is to return a fully customized **weekly training and meal plan**, buil
         });
 
         async function callGeminiAPI(prompt) {
-            const functionUrl = '/api/generate-plan';
+            const functionUrl = '/api/generate-plan'; // Assuming this is handled by a backend function
             const response = await fetch(functionUrl, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -809,87 +825,125 @@ Your job is to return a fully customized **weekly training and meal plan**, buil
         }
 
         // --- Utility Functions ---
-        function downloadPDF() {
+        async function downloadPDF() {
             if (!currentPlanData) {
                 alert("Please generate a plan first!");
                 return;
             }
 
+            const originalButtonContent = downloadPdfButton.innerHTML;
+            downloadPdfButton.innerHTML = `<div class="swap-loader mr-2"></div> Generating...`; // Use swap-loader for consistency
+            downloadPdfButton.disabled = true;
+
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF({ orientation: 'p', unit: 'mm', format: 'a4' });
             const { plan, summary, meals } = currentPlanData;
 
-            let y = 20;
-            const pageMargin = 15;
-            const pageWidth = doc.internal.pageSize.getWidth();
-            const pageHeight = doc.internal.pageSize.getHeight();
-            const usableWidth = pageWidth - (pageMargin * 2);
+            // Populate PDF template
+            pdfDate.textContent = new Date().toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' });
+            pdfSummaryGoal.textContent = summary.goal;
+            pdfSummaryDays.textContent = summary.days_per_week;
+            pdfSummaryStyle.textContent = summary.style;
+            pdfSummaryEquipment.textContent = summary.equipment_used.join(', ');
+            pdfSummaryAdjustments.textContent = summary.adjustments.length > 0 ? summary.adjustments.join(', ') : 'None';
+            pdfUserProfile.textContent = `${summary.user_profile.sex}, ${summary.user_profile.age} years old, ${summary.user_profile.height_cm}cm, ${summary.user_profile.weight_kg}kg`;
 
-            // Header
-            doc.setFontSize(24);
-            doc.setFont("helvetica", "bold");
-            doc.text("GymPlan.fit", pageMargin, y);
-            y += 10;
-
-            // Daily Plans
+            // Populate workout days
+            pdfWorkoutDays.innerHTML = '';
             plan.forEach(day => {
-                if (y > pageHeight - 40) {
-                    doc.addPage();
-                    y = 20;
-                }
-                doc.setFontSize(14);
-                doc.setFont("helvetica", "bold");
-                doc.text(`${day.day}: ${day.focus}`, pageMargin, y);
-                y += 8;
+                const exercisesHtml = day.exercises.map(ex => `
+                    <li class="mb-2 pb-2 border-b border-gray-200 last:border-b-0">
+                        <strong class="text-gray-800">${ex.name}</strong> – ${ex.sets}x${ex.reps} @ ${ex.rest_seconds}s rest
+                        <p class="text-xs text-gray-600 italic mt-1">Notes: ${ex.notes || 'None'}</p>
+                        <ul class="list-disc list-inside text-xs text-gray-600 mt-1">
+                            ${ex.instructions.map(inst => `<li>${inst}</li>`).join('')}
+                        </ul>
+                    </li>
+                `).join('');
 
-                day.exercises.forEach(ex => {
-                    const exerciseText = `${ex.name} - ${ex.sets} sets x ${ex.reps} reps, ${ex.rest_seconds}s rest.`;
-                    const notesText = `Notes: ${ex.notes || 'None'}`;
-                    const exerciseLines = doc.splitTextToSize(exerciseText, usableWidth);
-                    const notesLines = doc.splitTextToSize(notesText, usableWidth);
-
-                    if (y + (exerciseLines.length * 5) + (notesLines.length * 5) > pageHeight - 20) {
-                        doc.addPage();
-                        y = 20;
-                    }
-                    doc.setFontSize(11);
-                    doc.setFont("helvetica", "bold");
-                    doc.text(exerciseLines, pageMargin, y);
-                    y += (exerciseLines.length * 5);
-                    doc.setFontSize(9);
-                    doc.setFont("helvetica", "italic");
-                    doc.text(notesLines, pageMargin + 2, y);
-                    y += (notesLines.length * 5) + 3;
-                });
-                y += 7;
+                pdfWorkoutDays.innerHTML += `
+                    <article class="p-4 bg-white rounded-lg shadow-sm border border-gray-200">
+                        <h3 class="text-lg font-bold text-blue-600 mb-2">${day.day}: ${day.focus}</h3>
+                        <ul class="space-y-2">
+                            ${exercisesHtml}
+                        </ul>
+                        ${day.cardio ? `
+                            <div class="mt-4 pt-4 border-t border-gray-200">
+                                <h4 class="text-md font-semibold text-gray-800">Cardio: ${day.cardio.type}</h4>
+                                <p class="text-sm text-gray-700">Duration: ${day.cardio.duration_minutes} min, Intensity: ${day.cardio.intensity}</p>
+                                <p class="text-sm text-gray-700">Timing: ${day.cardio.timing}</p>
+                                <p class="text-xs text-gray-600 italic">Notes: ${day.cardio.notes}</p>
+                            </div>
+                        ` : ''}
+                    </article>
+                `;
             });
 
-            // Nutrition
+            // Populate nutrition
             if (meals && meals.macros) {
-                if (y > pageHeight - 40) {
-                    doc.addPage();
-                    y = 20;
-                }
-                doc.setDrawColor(200);
-                doc.line(pageMargin, y, pageWidth - pageMargin, y);
-                y += 10;
-                doc.setFontSize(16);
-                doc.setFont("helvetica", "bold");
-                doc.text("Nutrition Guidance", pageMargin, y);
-                y += 7;
-
-                doc.setFontSize(11);
-                doc.setFont("helvetica", "normal");
-                doc.text(`Target Calories: ~${meals.macros.daily_calories || meals.daily_calories} kcal`, pageMargin, y);
-                y += 6;
-                doc.text(`Target Protein: ~${meals.macros.protein_g}g`, pageMargin, y);
-                y += 6;
-                doc.text(`Target Fats: ~${meals.macros.fats_g}g`, pageMargin, y);
-                y += 6;
-                doc.text(`Target Carbs: ~${meals.macros.carbs_g}g`, pageMargin, y);
+                const macros = meals.macros;
+                pdfNutritionSection.innerHTML = `
+                    <h3 class="text-xl font-bold text-gray-800 mb-4">AI Nutrition Guidance</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 text-center">
+                        <div class="bg-white p-4 rounded-lg border border-gray-200">
+                            <p class="text-sm text-gray-600">Calories</p>
+                            <p class="text-2xl font-bold text-blue-600">${macros.daily_calories || meals.daily_calories} kcal</p>
+                        </div>
+                        <div class="bg-white p-4 rounded-lg border border-gray-200">
+                            <p class="text-sm text-gray-600">Protein</p>
+                            <p class="text-2xl font-bold text-blue-600">${macros.protein_g}g</p>
+                        </div>
+                        <div class="bg-white p-4 rounded-lg border border-gray-200">
+                            <p class="text-sm text-gray-600">Carbs</p>
+                            <p class="text-2xl font-bold text-blue-600">${macros.carbs_g}g</p>
+                        </div>
+                        <div class="bg-white p-4 rounded-lg border border-gray-200">
+                            <p class="text-sm text-gray-600">Fats</p>
+                            <p class="text-2xl font-bold text-blue-600">${macros.fats_g}g</p>
+                        </div>
+                    </div>
+                `;
+            } else {
+                pdfNutritionSection.innerHTML = ''; // Clear if no nutrition data
             }
 
-            doc.save('GymPlan.pdf');
+            // Make the template visible but off-screen for rendering
+            pdfTemplate.classList.remove('hidden');
+            pdfTemplate.style.position = 'absolute';
+            pdfTemplate.style.left = '-9999px';
+            pdfTemplate.style.top = '-9999px';
+            pdfTemplate.style.width = '210mm'; // A4 width
+            pdfTemplate.style.minHeight = '297mm'; // A4 height
+            pdfTemplate.style.padding = '20mm'; // Add some padding for the PDF margins
+
+
+            // Use html2canvas and jspdf.html() for better rendering
+            await doc.html(pdfTemplate, {
+                callback: function (doc) {
+                    doc.save('GymPlan.pdf');
+                    // Hide the template again after generation
+                    pdfTemplate.classList.add('hidden');
+                    pdfTemplate.style.position = '';
+                    pdfTemplate.style.left = '';
+                    pdfTemplate.style.top = '';
+
+                    // Restore button state
+                    downloadPdfButton.innerHTML = originalButtonContent;
+                    downloadPdfButton.disabled = false;
+                },
+                x: 0,
+                y: 0,
+                html2canvas: {
+                    scale: 0.75, // Adjust scale for better quality/fit on A4
+                    logging: true,
+                    useCORS: true // Important for images
+                },
+                margin: [10, 10, 10, 10], // Top, Right, Bottom, Left margins in mm
+                autoPaging: 'text', // Automatically paginate based on text flow
+                // Add a footer with page numbers
+                // This is a more advanced option, for simplicity, we'll let autoPaging handle content flow
+                // If custom headers/footers are needed, it's more complex with doc.html()
+            });
         }
 
     </script>
